--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="header__img" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
@@ -31,8 +31,8 @@
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+          <button class="delete"> 
+            <img class="button-delete_icon" src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode">
@@ -41,7 +41,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img class="button-delete_icon" src="./remove.svg">
           </button>
         </li>
       </ul>
@@ -53,7 +53,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img class="button-delete_icon" src="./remove.svg">
           </button>
         </li>
       </ul>
