refactor: частично удалены теговые селекторы

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         Want more details?
       </a>
     </header>
-    <main class="centered-main-page-element">
-      <section id="top-section-for-adding-element-to-list">
-        <label for="new-task">Add Item</label>
+    <main class="main-wrapper">
+      <section class="block-add">
+        <label class="block-add__label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
-      </section>
+      </sectionclass>
       <section>
         <h3 class="title">Todo</h3>
         <ul id="incomplete-tasks">
@@ -48,7 +48,7 @@
         </ul>
       </section>
       <section>
-      <h3>Completed</h3>
+      <h3 class="title">Completed</h3>
         <ul id="completed-tasks">
           <li>
             <input type="checkbox" checked>
